New section added

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                         <h1 class="mb-5">Shop Now.<br>Pay Later.</h1>
                         <h4 class="mp-text-dark-blue mb-5">You can now shop at your favourite online store today and pay
                             later using mintpay.</h4>
-                        <button class="mp-btn">Shop now</button>
+                        <a class="mp-btn" href="#">Shop now</a>
                     </div>
                 </div>
 
@@ -121,22 +121,131 @@
             <div class="row step-block">
                 <div class="col-12 col-lg-4">
                     <img class="mb-4" src="assets/img/how-it-works-1.png" alt="">
-                    <h3 class="step-no mb-2">01</h3>
+                    <h3 class="step-no mb-2">01.</h3>
                     <h5 class="px-sm-4">Choose Mintpay as the payment option at the checkout.</h5>
                 </div>
                 <div class="col-12 col-lg-4">
                     <img class="mb-4" src="assets/img/how-it-works-2.png" alt="">
-                    <h3 class="step-no mb-2">02</h3>
+                    <h3 class="step-no mb-2">02.</h3>
                     <h5 class="px-sm-4">Pay the first installment at point of purchase using debit or credit card.</h5>
                 </div>
                 <div class="col-12 col-lg-4">
                     <img class="mb-4" src="assets/img/how-it-works-3.png" alt="">
-                    <h3 class="step-no mb-2">03</h3>
-                    <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged on the due dates.</h5>
+                    <h3 class="step-no mb-2">03.</h3>
+                    <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged on the
+                        due dates.</h5>
                 </div>
             </div>
         </div>
     </section>
+    <section class="banner-section black-gradient">
+        <div class="container text-center">
+            <div class="three-text-line d-flex align-items-center justify-content-center flex-wrap">
+                <h2 class="mp-text-light">No interest</h2>
+                <div class="dot-separator"></div>
+                <h2 class="mp-text-light">No hidden fees</h2>
+                <div class="dot-separator"></div>
+                <h2 class="mp-text-light">No worries</h2>
+            </div>
+
+            <h4 class="mp-text-light mb-5">Payments are automatically charged from your debit or credit card</h4>
+
+            <a class="mp-btn" href="#">Sign up now</a>
+        </div>
+    </section>
+    <section class="split-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 d-flex flex-column align-items-start justify-content-center">
+                    <h2 class="mp-text-dark-blue mb-5">Own your<br>online shopping<br>freedom</h2>
+                    <h4 class="mb-5 pe-5">Don't let low balance ruin your shopping experience. With mintpay, you can buy what
+                        you want-when you want it.</h4>
+                    <button class="mp-btn mp-btn--secondary">Shop now</button>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="img-wrapper">
+                        <img src="assets/img/shopping-freedom.jpg" alt="">
+                        <div class="dot-square"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="testimonial-section">
+        <div class="container">
+            <h4 class="mp-text-dark-blue text-center">Our customers’ feedback are what we value the most</h4>
+            <div class="testimonial-slider mt-4">
+                <div class="testimonial">
+                    <div class="testimonial__text px-md-5">“Very convenient and stress free. Highly recommended.” - Giesyl Ann</div>
+                    <img src="" alt="" class="testimonial__img">
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial__text px-md-5">"Just what I was looking for. The very best. I love mintpay. I could probably go into sales for you."
+                        - Sonnnie Z.</div>
+                    <img src="" alt="" class="testimonial__img">
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial__text px-md-5">"Absolutely wonderful! If you aren't sure, always go for mintpay. It's really wonderful. Thank you for making it painless, pleasant and most of all hassle free!"
+                        - Olag J.</div>
+                    <img src="" alt="" class="testimonial__img">
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial__text px-md-5">"Just what I was looking for. Since I invested in mintpay I made over 100,000 dollars profits."
+                        - Phylys E.</div>
+                    <img src="" alt="" class="testimonial__img">
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial__text">"You've saved our business! We were treated like royalty. Best. Product. Ever!"
+                        - Kissie F.</div>
+                    <img src="" alt="" class="testimonial__img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="banner-section blue-gradient">
+        <div class="container text-center">
+            <h2 class="mp-text-light mb-4">Have a business and<br>want to sell with Mintpay?</h2>
+
+            <h4 class="mp-text-light mb-5">Convert more customers, multiply your sales</h4>
+
+            <a class="mp-btn" href="#">Partner with us</a>
+        </div>
+    </section>
+
+    <section class="logo-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img class="w-100 px-4 px-md-5" src="assets/img/stripes-n-checkes.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img class="w-100 px-4 px-md-5" src="assets/img/urban.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img class="w-100 px-4 px-md-5" src="assets/img/iris-garden.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <img class="w-100 px-4 px-md-5" src="assets/img/zigma-jones.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 col-xl-3"></div>
+                <div class="col-12 col-lg-6 col-xl-3"></div>
+                <div class="col-12 col-lg-6 col-xl-3"></div>
+                <div class="col-12 col-lg-6 col-xl-3"></div>
+            </div>
+        </div>
+    </footer>
     <script src="assets/js/main.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
