--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Be+Vietnam:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
+        <link href="assets/uicons/css/uicons-solid-rounded.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="assets/scss/_main.scss">
     <title>Mintpay</title>
@@ -19,7 +20,7 @@
     <section class="header-section">
         <header>
             <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-                <div class="container d-flex justify-content-between">
+                <div class="container d-flex">
                     <a class="navbar-brand" href="#"><svg width="160" height="43" viewBox="0 0 160 43" fill="none">
                             <g clip-path="url(#clip0)">
                                 <path
@@ -67,12 +68,12 @@
                         </svg>
                     </a>
 
-                    <ul class="navbar-nav flex-shrink-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Sign up</a>
+                    <ul class="navbar-nav flex-shrink-0 flex-row">
+                        <li class="nav-item me-4">
+                            <a class="nav-link signup" aria-current="page" href="#">Sign up <i class="fi-sr-user"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log in</a>
+                            <a class="nav-link login" href="#">Log in <i class="fi-sr-shopping-bag"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -119,18 +120,18 @@
             </div>
 
             <div class="row step-block">
-                <div class="col-12 col-lg-4">
-                    <img class="mb-4" src="assets/img/how-it-works-1.png" alt="">
+                <div class="col-12 col-lg-4 mb-5 mb-lg-0">
+                    <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
                     <h3 class="step-no mb-2">01.</h3>
                     <h5 class="px-sm-4">Choose Mintpay as the payment option at the checkout.</h5>
                 </div>
-                <div class="col-12 col-lg-4">
-                    <img class="mb-4" src="assets/img/how-it-works-2.png" alt="">
+                <div class="col-12 col-lg-4 mb-5 mb-lg-0">
+                    <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
                     <h3 class="step-no mb-2">02.</h3>
                     <h5 class="px-sm-4">Pay the first installment at point of purchase using debit or credit card.</h5>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <img class="mb-4" src="assets/img/how-it-works-3.png" alt="">
+                    <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
                     <h3 class="step-no mb-2">03.</h3>
                     <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged on the
                         due dates.</h5>
@@ -156,9 +157,11 @@
     <section class="split-section">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6 d-flex flex-column align-items-start justify-content-center">
-                    <h2 class="mp-text-dark-blue mb-5">Own your<br>online shopping<br>freedom</h2>
-                    <h4 class="mb-5 pe-5">Don't let low balance ruin your shopping experience. With mintpay, you can buy what
+                <div class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-lg-start justify-content-center text-center text-lg-start">
+                    <h2 class="mp-text-dark-blue d-none d-lg-block mb-5">Own your<br>online shopping<br>freedom</h2>
+                    <h2 class="mp-text-dark-blue d-lg-none mb-4">Own your online shopping freedom</h2>
+                    <h4 class="mb-5 pe-5">Don't let low balance ruin your shopping experience. With mintpay, you can buy
+                        what
                         you want-when you want it.</h4>
                     <button class="mp-btn mp-btn--secondary">Shop now</button>
                 </div>
@@ -176,30 +179,36 @@
             <h4 class="mp-text-dark-blue text-center">Our customers’ feedback are what we value the most</h4>
             <div class="testimonial-slider mt-4">
                 <div class="testimonial">
-                    <div class="testimonial__text px-md-5">“Very convenient and stress free. Highly recommended.” - Giesyl Ann</div>
+                    <div class="testimonial__text px-md-5">“Very convenient and stress free. Highly recommended.” -
+                        Giesyl Ann</div>
                     <img src="" alt="" class="testimonial__img">
                 </div>
 
                 <div class="testimonial">
-                    <div class="testimonial__text px-md-5">"Just what I was looking for. The very best. I love mintpay. I could probably go into sales for you."
+                    <div class="testimonial__text px-md-5">"Just what I was looking for. The very best. I love mintpay.
+                        I could probably go into sales for you."
                         - Sonnnie Z.</div>
                     <img src="" alt="" class="testimonial__img">
                 </div>
 
                 <div class="testimonial">
-                    <div class="testimonial__text px-md-5">"Absolutely wonderful! If you aren't sure, always go for mintpay. It's really wonderful. Thank you for making it painless, pleasant and most of all hassle free!"
+                    <div class="testimonial__text px-md-5">"Absolutely wonderful! If you aren't sure, always go for
+                        mintpay. It's really wonderful. Thank you for making it painless, pleasant and most of all
+                        hassle free!"
                         - Olag J.</div>
                     <img src="" alt="" class="testimonial__img">
                 </div>
 
                 <div class="testimonial">
-                    <div class="testimonial__text px-md-5">"Just what I was looking for. Since I invested in mintpay I made over 100,000 dollars profits."
+                    <div class="testimonial__text px-md-5">"Just what I was looking for. Since I invested in mintpay I
+                        made over 100,000 dollars profits."
                         - Phylys E.</div>
                     <img src="" alt="" class="testimonial__img">
                 </div>
 
                 <div class="testimonial">
-                    <div class="testimonial__text">"You've saved our business! We were treated like royalty. Best. Product. Ever!"
+                    <div class="testimonial__text">"You've saved our business! We were treated like royalty. Best.
+                        Product. Ever!"
                         - Kissie F.</div>
                     <img src="" alt="" class="testimonial__img">
                 </div>
@@ -239,10 +248,49 @@
     <footer class="main-footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6 col-xl-3"></div>
-                <div class="col-12 col-lg-6 col-xl-3"></div>
-                <div class="col-12 col-lg-6 col-xl-3"></div>
-                <div class="col-12 col-lg-6 col-xl-3"></div>
+                <div class="col-12 col-lg-6 col-xl-3">
+                    <div class="footer-block">
+                        <h4 class="footer-block__title mb-4">Contact details</h4>
+                        <p class="footer-block__text mb-3"><a href="mailto:support@mintpay.lk">support@mintpay.lk</a>
+                        </p>
+                        <p class="footer-block__text mb-3">+94 772 985 290</p>
+                        <address class="footer-block__text">410, 33 Bauddhaloka Mawatha, Colombo 00700</address>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 col-xl-3">
+                    <div class="footer-block">
+                        <h4 class="footer-block__title mb-4">Useful links</h4>
+                        <ul class="footer-block__nav">
+                            <li class="footer-block__text mb-3"><a href="#">Support</a></li>
+                            <li class="footer-block__text mb-3"><a href="#">Terms &amp; conditions</a></li>
+                            <li class="footer-block__text"><a href="#">Privacy policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 col-xl-3 mt-4 mt-xl-0">
+                    <div class="footer-block">
+                        <h4 class="footer-block__title mb-4">Banking Partners</h4>
+                        <div class="footer-block__logos d-flex flex-wrap">
+                            <img class="me-4" src="assets/img/mastercard-logo.png" alt="">
+                            <img class="" src="assets/img/seylan-logo.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 col-xl-3 mt-4 mt-xl-0">
+                    <div class="footer-block">
+                        <h4 class="footer-block__title mb-4">Newsletter subscription</h4>
+                        <form action="" class="footer-block__form d-flex">
+                            <input class="flex-grow-1 me-2" type="text" placeholder="Enter your email">
+                            <button class="mp-btn mp-btn--footer flex-shrink-0">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-bottom-text text-center">Copyright 2021 &copy; Mintpay Pte Ltd. All rights reserved.</div>
+                </div>
             </div>
         </div>
     </footer>
