--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link href="assets/uicons/css/uicons-solid-rounded.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="assets/scss/_main.scss">
-    <title>Mintpay</title>
+    <title>Mintpay | Sri Lanaka's No.1 Buy now pay later service</title>
 </head>
 
 <body>
@@ -40,7 +40,8 @@
                         </div>
                     </div>
                     <div class="hero-section text-center text-md-start mt-4 mt-md-0">
-                        <h4 class="mp-text-dark-blue mb-4 mb-md-5">You can now shop at your favourite online store today and pay
+                        <h4 class="mp-text-dark-blue mb-4 mb-md-5">You can now shop at your favourite online store today
+                            and pay
                             later using mintpay.</h4>
                         <a class="mp-btn" href="#">Shop now</a>
                     </div>
@@ -92,7 +93,8 @@
     </section>
     <section class="banner-section black-gradient">
         <div class="container text-center">
-            <div class="three-text-line d-flex flex-column flex-sm-row align-items-center justify-content-center flex-wrap">
+            <div
+                class="three-text-line d-flex flex-column flex-sm-row align-items-center justify-content-center flex-wrap">
                 <h2 class="mp-text-light">No interest</h2>
                 <div class="dot-separator d-none d-sm-block"></div>
                 <h2 class="mp-text-light">No hidden fees</h2>
@@ -112,7 +114,8 @@
                     class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-lg-start justify-content-center text-center text-lg-start">
                     <h2 class="mp-text-dark-blue d-none d-lg-block mb-5">Own your<br>online shopping<br>freedom</h2>
                     <h2 class="mp-text-dark-blue d-lg-none mb-4">Own your online shopping freedom</h2>
-                    <h4 class="mb-5 pe-lg-5">Don't let low balance ruin your shopping experience. With mintpay, you can buy
+                    <h4 class="mb-5 pe-lg-5">Don't let low balance ruin your shopping experience. With mintpay, you can
+                        buy
                         what
                         you want-when you want it.</h4>
                     <button class="mp-btn mp-btn--secondary">Shop now</button>
@@ -180,19 +183,14 @@
 
     <section class="logo-section">
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-3">
-                    <img class="w-100 px-4 px-md-5" src="assets/img/stripes-n-checkes.png" alt="">
-                </div>
-                <div class="col-12 col-md-6 col-lg-3 mt-5 mt-md-0">
-                    <img class="w-100 px-4 px-md-5" src="assets/img/urban.png" alt="">
-                </div>
-                <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
-                    <img class="w-100 px-4 px-md-5" src="assets/img/iris-garden.png" alt="">
-                </div>
-                <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
-                    <img class="w-100 px-4 px-md-5" src="assets/img/zigma-jones.png" alt="">
-                </div>
+            <div class="logo-slider">
+                <img class="px-4 px-md-5" src="assets/img/stripes-n-checkes.png" alt="">
+
+                <img class="px-4 px-md-5" src="assets/img/urban.png" alt="">
+
+                <img class="px-4 px-md-5" src="assets/img/iris-garden.png" alt="">
+
+                <img class="px-4 px-md-5" src="assets/img/zigma-jones.png" alt="">
             </div>
         </div>
     </section>
