--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                         <h4 class="mp-text-dark-blue mb-4 mb-md-5">You can now shop at your favourite online store today
                             and pay
                             later using mintpay.</h4>
-                        <a class="mp-btn" href="#">Shop now</a>
+                        <a class="mp-btn" href="stores.html">Shop now</a>
                     </div>
                 </div>
 
@@ -67,22 +67,22 @@
     <section class="how-it-works-section">
         <div class="container">
             <div class="header-text-block text-center">
-                <h2 class="mp-text-dark-blue mb-4">How it works</h2>
-                <h4>We’ve partnered with your favourite retailers to offer you the flexibility to pay</h4>
+                <h2 class="mp-text-dark-blue mb-4" data-aos="fade-down" >How it works</h2>
+                <h4 data-aos="fade-down">We’ve partnered with your favourite retailers to offer you the flexibility to pay</h4>
             </div>
 
             <div class="row step-block">
-                <div class="col-12 col-lg-4 mb-5 mb-lg-0">
+                <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="100" data-aos-duration="1000">
                     <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
                     <h3 class="step-no mb-2">01.</h3>
                     <h5 class="px-sm-4">Choose Mintpay as the payment option at the checkout.</h5>
                 </div>
-                <div class="col-12 col-lg-4 mb-5 mb-lg-0">
+                <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="200" data-aos-duration="1000">
                     <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
                     <h3 class="step-no mb-2">02.</h3>
                     <h5 class="px-sm-4">Pay the first installment at point of purchase using debit or credit card.</h5>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-4" data-aos="flip-left" data-aos-offset="300" data-aos-duration="1000">
                     <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
                     <h3 class="step-no mb-2">03.</h3>
                     <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged on the
@@ -95,16 +95,16 @@
         <div class="container text-center">
             <div
                 class="three-text-line d-flex flex-column flex-sm-row align-items-center justify-content-center flex-wrap">
-                <h2 class="mp-text-light">No interest</h2>
-                <div class="dot-separator d-none d-sm-block"></div>
-                <h2 class="mp-text-light">No hidden fees</h2>
-                <div class="dot-separator d-none d-sm-block"></div>
-                <h2 class="mp-text-light">No worries</h2>
+                <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">No interest</h2>
+                <div class="dot-separator d-none d-sm-block" data-aos="zoom-in" data-aos-offset="200" data-aos-duration="1000"></div>
+                <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="200" data-aos-duration="1000">No hidden fees</h2>
+                <div class="dot-separator d-none d-sm-block" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000"></div>
+                <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000">No worries</h2>
             </div>
 
-            <h4 class="mp-text-light mb-5">Payments are automatically charged from your debit or credit card</h4>
+            <h4 class="mp-text-light mb-5" data-aos="fade-up" data-aos-offset="400" data-aos-duration="1000">Payments are automatically charged from your debit or credit card</h4>
 
-            <a class="mp-btn" href="#">Sign up now</a>
+            <a class="mp-btn" href="#" data-aos="fade-up" data-aos-offset="450" data-aos-duration="1000">Sign up now</a>
         </div>
     </section>
     <section class="split-section">
@@ -112,18 +112,16 @@
             <div class="row">
                 <div
                     class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-lg-start justify-content-center text-center text-lg-start">
-                    <h2 class="mp-text-dark-blue d-none d-lg-block mb-5">Own your<br>online shopping<br>freedom</h2>
-                    <h2 class="mp-text-dark-blue d-lg-none mb-4">Own your online shopping freedom</h2>
-                    <h4 class="mb-5 pe-lg-5">Don't let low balance ruin your shopping experience. With mintpay, you can
-                        buy
-                        what
-                        you want-when you want it.</h4>
-                    <button class="mp-btn mp-btn--secondary">Shop now</button>
+                    <h2 class="mp-text-dark-blue d-none d-lg-block mb-5" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">Own your<br>online shopping<br>freedom</h2>
+                    <h2 class="mp-text-dark-blue d-lg-none mb-4" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">Own your online shopping freedom</h2>
+                    <h4 class="mb-5 pe-lg-5" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">Don't let low balance ruin your shopping experience. With mintpay, you can
+                        buy what you want-when you want it.</h4>
+                    <button class="mp-btn mp-btn--secondary" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000">Shop now</button>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="img-wrapper">
-                        <img src="assets/img/shopping-freedom.jpg" alt="">
-                        <div class="dot-square"></div>
+                        <img src="assets/img/shopping-freedom.jpg" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-duration="1000">
+                        <div class="dot-square" data-aos="zoom-in" data-aos-offset="0" data-aos-duration="2500"></div>
                     </div>
                 </div>
             </div>
@@ -173,11 +171,11 @@
 
     <section class="banner-section blue-gradient">
         <div class="container text-center">
-            <h2 class="mp-text-light mb-4">Have a business and<br>want to sell with Mintpay?</h2>
+            <h2 class="mp-text-light mb-4" data-aos="fade-down" data-aos-duration="1000">Have a business and<br>want to sell with Mintpay?</h2>
 
-            <h4 class="mp-text-light mb-5">Convert more customers, multiply your sales</h4>
+            <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Convert more customers, multiply your sales</h4>
 
-            <a class="mp-btn" href="#">Partner with us</a>
+            <a class="mp-btn" href="#" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">Partner with us</a>
         </div>
     </section>
 
