Store page done

--- a/src/stores.html
+++ b/src/stores.html
@@ -46,6 +46,80 @@
                     optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
                     quasi incidunt quidem?</p>
             </div>
+
+            <div class="continer-fluid">
+                <div class="store-slider">
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/zigzag.jpg" alt="">
+                            <div class="store-link">
+                                <a href="http://zigzag.lk" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">ZIGZAG</h5>
+                    </div>
+
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/zigma-jones.jpg" alt="">
+                            <div class="store-link">
+                                <a href="https://zigmajones.com/" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">Zigma Jones</h5>
+                    </div>
+
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/thirteen31.png" alt="">
+                            <div class="store-link">
+                                <a href="https://www.thirteen31.com/" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">Thirteen Thirty One</h5>
+                    </div>
+
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/stripes-checks.jpg" alt="">
+                            <div class="store-link">
+                                <a href="https://stripesandchecksinc.com/" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
+                    </div>
+
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/iris-garden.jpg" alt="">
+                            <div class="store-link">
+                                <a href="https://irisgarden.lk/" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">Iris Garden</h5>
+                    </div>
+
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/glitteray.jpg" alt="">
+                            <div class="store-link">
+                                <a href="https://www.glitterayjewellery.com/" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">Glitteray</h5>
+                    </div>
+
+                    <div class="store-slider__item">
+                        <div class="store-img position-relative">
+                            <img src="assets/img/stores/ekko.jpg" alt="">
+                            <div class="store-link">
+                                <a href="https://www.ekko.style/" target="_blank">View store</a>
+                            </div>
+                        </div>
+                        <h5 class="store-title mt-3">EKKO</h5>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
