Magor UI improvements in store page

--- a/src/stores.html
+++ b/src/stores.html
@@ -22,22 +22,21 @@
         <div class="container text-center">
             <h1 class="font-weight-bold mp-text-dark-blue mb-4">Shop Now with Mintpay.</h1>
             <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, in.</h4>
-
-            <div class="filter-block d-flex justify-content-center mt-5">
-                <div class="filter-block__text me-3">Filter by <i class="fi-sr-caret-right ms-2"></i></div>
-                <ul class="filter-block__btns">
-                    <li class="active">Best sellers</li>
-                    <li>Women</li>
-                    <li>Men</li>
-                    <li>Beauty</li>
-                    <li>Jewlery &amp; Accessories</li>
-                    <li>Miscellaneous</li>
-                </ul>
-            </div>
         </div>
     </section>
 
     <section class="stores-section">
+
+        <div class="filter-block d-flex justify-content-center px-3 px-md-5">
+            <div class="filter-block__slider">
+                <div class="filter-block__slider__item">Best sellers</div>
+                <div class="filter-block__slider__item">Women</div>
+                <div class="filter-block__slider__item">Men</div>
+                <div class="filter-block__slider__item">Beauty</div>
+                <div class="filter-block__slider__item">Jewlery &amp; Accessories</div>
+                <div class="filter-block__slider__item">Miscellaneous</div>
+            </div>
+        </div>
 
         <div class="category-block">
             <div class="container">
