Store page improvements

--- a/src/stores.html
+++ b/src/stores.html
@@ -29,12 +29,24 @@
 
         <div class="filter-block d-flex justify-content-center px-3 px-md-5">
             <div class="filter-block__slider">
-                <div class="filter-block__slider__item">Best sellers</div>
-                <div class="filter-block__slider__item">Women</div>
-                <div class="filter-block__slider__item">Men</div>
-                <div class="filter-block__slider__item">Beauty</div>
-                <div class="filter-block__slider__item">Jewlery &amp; Accessories</div>
-                <div class="filter-block__slider__item">Miscellaneous</div>
+                <div>
+                    <div class="filter-block__slider__item">Best sellers</div>
+                </div>
+                <div>
+                    <div class="filter-block__slider__item">Women</div>
+                </div>
+                <div>
+                    <div class="filter-block__slider__item">Men</div>
+                </div>
+                <div>
+                    <div class="filter-block__slider__item">Beauty</div>
+                </div>
+                <div>
+                    <div class="filter-block__slider__item">Jewelry &amp; Accessories</div>
+                </div>
+                <div>
+                    <div class="filter-block__slider__item">Miscellaneous</div>
+                </div>
             </div>
         </div>
 
@@ -46,9 +58,12 @@
                     quasi incidunt quidem?</p>
             </div>
 
-            <div class="continer-fluid">
-                <div class="store-slider">
-                    <div class="store-slider__item">
+            <div class="continer-fluid mt-5">
+                <div class="mobile-view-more d-flex d-xl-none justify-content-end px-4">
+                    <a href="#">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+                </div>
+                <div class="store-block">
+                    <div class="store-block__item">
                         <div class="store-img position-relative">
                             <img src="assets/img/stores/zigzag.jpg" alt="">
                             <div class="store-link">
@@ -58,7 +73,7 @@
                         <h5 class="store-title mt-3">ZIGZAG</h5>
                     </div>
 
-                    <div class="store-slider__item">
+                    <div class="store-block__item">
                         <div class="store-img position-relative">
                             <img src="assets/img/stores/zigma-jones.jpg" alt="">
                             <div class="store-link">
@@ -68,7 +83,7 @@
                         <h5 class="store-title mt-3">Zigma Jones</h5>
                     </div>
 
-                    <div class="store-slider__item">
+                    <div class="store-block__item">
                         <div class="store-img position-relative">
                             <img src="assets/img/stores/thirteen31.png" alt="">
                             <div class="store-link">
@@ -78,7 +93,7 @@
                         <h5 class="store-title mt-3">Thirteen Thirty One</h5>
                     </div>
 
-                    <div class="store-slider__item">
+                    <div class="store-block__item">
                         <div class="store-img position-relative">
                             <img src="assets/img/stores/stripes-checks.jpg" alt="">
                             <div class="store-link">
@@ -88,34 +103,12 @@
                         <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
                     </div>
 
-                    <div class="store-slider__item">
-                        <div class="store-img position-relative">
-                            <img src="assets/img/stores/iris-garden.jpg" alt="">
+                    <div class="store-block__item view-more d-none d-xl-block">
+                        <div class="store-img view-more-block position-relative">
                             <div class="store-link">
-                                <a href="https://irisgarden.lk/" target="_blank">View store</a>
+                                <a href="#">View more</a>
                             </div>
                         </div>
-                        <h5 class="store-title mt-3">Iris Garden</h5>
-                    </div>
-
-                    <div class="store-slider__item">
-                        <div class="store-img position-relative">
-                            <img src="assets/img/stores/glitteray.jpg" alt="">
-                            <div class="store-link">
-                                <a href="https://www.glitterayjewellery.com/" target="_blank">View store</a>
-                            </div>
-                        </div>
-                        <h5 class="store-title mt-3">Glitteray</h5>
-                    </div>
-
-                    <div class="store-slider__item">
-                        <div class="store-img position-relative">
-                            <img src="assets/img/stores/ekko.jpg" alt="">
-                            <div class="store-link">
-                                <a href="https://www.ekko.style/" target="_blank">View store</a>
-                            </div>
-                        </div>
-                        <h5 class="store-title mt-3">EKKO</h5>
                     </div>
                 </div>
             </div>
@@ -124,7 +117,6 @@
 
     <include src="src/layouts/main-footer.html"></include>
 
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 
 </html>
